--- a/app/views/freebies/show.html.erb
+++ b/app/views/freebies/show.html.erb
@@ -18,4 +18,33 @@
   <%= @freebie.description %>
 </p>
 
+<h2>Comments</h2>
+<% @freebie.comments.each do |comment| %>
+  <p>
+    <strong>Commenter:</strong>
+    <%= comment.commenter %>
+  </p>
+
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+<h2>Add a comment:</h2>
+<%= form_for([@freebie, @freeby.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter %><br>
+    <%= f.text_field :commenter %>
+  </p>
+  <p>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+
+<%= link_to 'Edit', edit_freeby_path(@freebie) %> |
 <%= link_to 'Back', freebies_path %>
