--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
-<h1>forNOTHING!</h1>
-  <%= image_tag "free_sign.png" %>
+
+<%= image_tag "free_shit.png" %>
   <br/>
-  <%= link_to 'View All Freebies', controller: 'freebies' %>
+<%= link_to 'View All Freebies', controller: 'freebies' %>
 
 
